# wishlists-rs

./: .editorconfig  .env  .justfile  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  migrations.dockerfile  rustfmt.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.sqlx/: query-193db9407abb94c588557d67b8cae30cb9087768a6bb43814e348d17ec0825b4.json  query-36d1425ce22d84793d5ddf0fb67cc52891a3aa22fc0328b4e9676e519b71e132.json  query-43fec8eef463c6a60800c991127c835177f94e031df56e0ab7ca0c161e8938d4.json  query-53e79eb185b0b0448c3c6857629e1ee879f888d9f62a68fc1d3ba13fa4228a77.json  query-575304e1e2ffe945a3efe7cc8f6ff8b10291ba00630ab67e1ab07f7b582c86e0.json  query-63d14abc147ce26626d72c5baf19fef85a93cd00bef7ac7c8ab6d37d97e6e614.json  query-71f59554a2c8e9d5fc44f279e085873f67e4a3dcf9c79a9cf0bcd1226bf6ed55.json  query-7d4ef681dcfc4678dccbfbef196831763d106701976644f52ead66e271cff097.json  query-a4c44b4eb91710dcd60349211eaf790679a3d2a720d0ecc19f2a4966ed742e04.json  query-e71535c3bd1e68a76062cfaea0146ecda6953821cb9f00d0d1ff1fb08d235ee2.json
crates/database/: Cargo.toml
crates/database/src/: connection.rs  crud.rs  errors.rs  item_pictures.rs  items.rs  lib.rs  repository.rs  repository_trait.rs  subscriptions.rs  user_avatars.rs  users.rs  wishlists.rs
crates/database/src/crud/: items.rs  mod.rs  users.rs  wishlists.rs
crates/database/src/implementations/: item_pictures.rs  items.rs  mod.rs  subscriptions.rs  user_avatars.rs  users.rs  wishlists.rs
crates/database/src/interfaces/: items.rs  users.rs  wishlists.rs
crates/database/src/structs/: items.rs  mod.rs  users.rs  wishlists.rs
crates/database/src/structs/items/: create.rs  get.rs  update.rs
crates/database/src/structs/users/: create.rs  get.rs  mod.rs  update.rs
crates/database/src/structs/wishlists/: create.rs  list.rs  update.rs
crates/database/src/traits/: mod.rs  subscriptions.rs  user_avatars.rs  wishlists.rs
crates/entities/: Cargo.toml
crates/entities/src/: items.rs  lib.rs  prelude.rs  subscriptions.rs  users.rs  wishlists.rs
crates/migrations/: Cargo.toml
crates/migrations/src/: lib.rs  m20230726_210816_base.rs  m20230910_182812_base.rs
crates/router/: Cargo.toml
crates/router/src/: lib.rs  state.rs
crates/router/src/handlers/: health.rs  items.rs  mod.rs  users.rs  wishlists.rs
crates/router/src/handlers/items/: create.rs  delete.rs  get.rs  list.rs  mod.rs  update.rs
crates/router/src/handlers/users/: create.rs  delete.rs  get.rs  list.rs  mod.rs  update.rs
crates/router/src/handlers/wishlists/: create.rs  delete.rs  get.rs  list.rs  mod.rs  update.rs
crates/s3/: Cargo.toml
crates/s3/src/: connection.rs  lib.rs
migrations/: 20230708185823_base.down.sql  20230708185823_base.up.sql  20230708185823_users.up.sql
src/: config.rs  main.rs  utils.rs
src/handlers/: health.rs  items.rs  mod.rs  users.rs  wishlists.rs
src/router/: mod.rs
src/router/handlers/: health.rs  items.rs  users.rs  wishlists.rs
src/routers/: health.rs  mod.rs
src/routers/items/: create.rs  delete.rs  get.rs  list.rs  mod.rs  update.rs
src/routers/users/: create.rs  delete.rs  get.rs  list.rs  mod.rs  update.rs
src/routers/wishlists/: create.rs  delete.rs  get.rs  list.rs  mod.rs  update.rs
src/structs/: users.rs  wishlists.rs
src/v1/: mod.rs  users.rs  users_structs.rs
