[package]
name = "wishlists"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "app"
path = "src/main.rs"

[workspace]
members = [
  ".",
  "./crates/migrations",
  "./crates/entities",
  "./crates/database",
  "./crates/router",
]

[dependencies]
migrations = { path = "./crates/migrations" }
database = { path = "./crates/database" }
router = { path = "./crates/router" }
axum = "0.6.18"
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
clap = { version = "4.3.19", features = ["derive", "env"] }
