[package]
name = "wishlists"
version = "0.1.0"
edition = "2021"
authors = ["ysignat"]

[[bin]]
name = "app"
path = "src/main.rs"

[workspace]
members = [
  ".",
  "./crates/migrations",
  "./crates/entities",
  "./crates/database",
  "./crates/router",
  "./crates/s3",
]

[dependencies]
database = { path = "./crates/database" }
router = { path = "./crates/router" }
s3 = { path = "./crates/s3" }
axum = "0.6.20"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
clap = { version = "4.4.2", features = ["derive", "env", "string"] }
log = { version = "0.4.20", features = ["std"] }
tracing-subscriber = { version = "0.3.17", features = ["json"] }
