[package]
name = "database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
migrations = { path = "../migrations" }
entities = { path = "../entities" }
async-trait = "0.1.73"
chrono = { version = "0.4.29", features = ["serde"] }
uuid = { version = "1.4.1", features = ["v4", "serde"] }
sea-orm = { version = "0.12.2", default-features = false, features = [
  "chrono",
  "macros",
  "uuid",
  "debug-print",
  "runtime-tokio",
  "sqlx-postgres",
] }
serde = { version = "1.0.188", features = ["derive"] }
tokio-async-std = "1.5.3"

[lib]
name = "database"
path = "src/lib.rs"

[dev-dependencies]
sea-orm = { version = "0.12.2", features = ["mock", "tests-cfg"] }
tokio-async-std = { version = "1.5.3", features = ["attributes"] }
