[package]
name = "database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
migrations = { path = "../migrations" }
entities = { path = "../entities" }
async-trait = "0.1.73"
chrono = { version = "0.4.29", features = ["serde"] }
uuid = { version = "1.4.1", features = ["v4", "serde"] }
sea-orm = { version = "0.12.2", default-features = false, features = [
  "chrono",
  "macros",
  "uuid",
  "debug-print",
  "runtime-tokio",
  "sqlx-postgres",
  "debug-print",
] }
thiserror = "1.0.48"
aws-sdk-s3 = { version = "0.33.0", default-features = false }

[lib]
name = "database"
path = "src/lib.rs"
