[package]
name = "database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
migrations = { path = "../migrations" }
entities = { path = "../entities" }
async-trait = "0.1.74"
chrono = { version = "0.4.31", features = ["serde"] }
uuid = { version = "1.5.0", features = ["v4", "serde"] }
sea-orm = { version = "0.12.4", default-features = false, features = [
  "chrono",
  "macros",
  "uuid",
  "debug-print",
  "runtime-tokio",
  "sqlx-postgres",
  "debug-print",
] }
thiserror = "1.0.50"
aws-sdk-s3 = { version = "0.38.0", default-features = false }

[lib]
name = "database"
path = "src/lib.rs"
