[package]
name = "entities"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sea-orm = { version = "0.11.3", default-features = false, features = [
  "with-chrono",
  "macros",
  "with-uuid",
  "debug-print",
  "runtime-tokio-rustls",
  "sqlx-postgres",
  "with-json",
] }
serde = { version = "1.0.167", features = ["derive"] }

[lib]
name = "entities"
path = "src/lib.rs"
