[package]
name = "entities"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sea-orm = { version = "0.12.2", default-features = false, features = [
  "with-chrono",
  "macros",
  "with-uuid",
  "debug-print",
  "runtime-tokio",
  "sqlx-postgres",
] }

[lib]
name = "entities"
path = "src/lib.rs"
