[package]
name = "migrations"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
sea-orm-migration = { version = "0.12.4", features = [
  "runtime-tokio-rustls",
  "sqlx-postgres",
] }
async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }

[lib]
name = "migrations"
path = "src/lib.rs"
