[package]
name = "router"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
database = { path = "../database" }
axum = "0.6.20"
serde = { version = "1.0.188", features = ["derive"] }
uuid = { version = "1.4.1", features = ["v4", "serde"] }
anyhow = "1.0.71"
chrono = { version = "0.4.28", features = ["serde"] }


[lib]
name = "router"
path = "src/lib.rs"
