[package]
name = "router"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
database = { path = "../database" }
axum = "0.6.20"
serde = { version = "1.0.189", features = ["derive"] }
uuid = { version = "1.5.0", features = ["v4", "serde"] }
anyhow = "1.0.75"
chrono = { version = "0.4.31", features = ["serde"] }


[lib]
name = "router"
path = "src/lib.rs"
