[package]
name = "s3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-sdk-s3 = "0.30.0"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.14"
uuid = { version = "1.4.1", features = ["v4"] }
async-trait = "0.1.73"
thiserror = "1.0.48"

[lib]
name = "s3"
path = "src/lib.rs"
